# py-example-pong

./: .gitignore  .gitmodules  README.md  client_test.py  main.py  pong.kv  pyproject.toml  requirements.txt  test_client.py
.github/workflows/: ci.yml
tests/: conftest.py  test_network_manager.py  test_pong_game.py  test_pong_widgets.py
